Orgnaized deps some more and updated readme

--- a/env.yaml
+++ b/env.yaml
@@ -2,11 +2,14 @@ name: simple_space_simulator
 channels:
   - defaults
 dependencies:
+  - autopep8=1.5.4=py_0
   - blas=1.0=mkl
   - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=py38_0
+  - certifi=2020.6.20=pyhd3eb1b0_3
   - cycler=0.10.0=py38_0
+  - flake8=3.8.4=py_0
   - freetype=2.10.4=ha233b18_0
+  - importlib-metadata=2.0.0=py_1
   - intel-openmp=2019.4=233
   - jpeg=9b=he5867d9_2
   - kiwisolver=1.2.0=py38h04f5b5a_0
@@ -19,6 +22,7 @@ dependencies:
   - lz4-c=1.9.2=h79c402e_3
   - matplotlib=3.3.2=0
   - matplotlib-base=3.3.2=py38h181983e_0
+  - mccabe=0.6.1=py38_1
   - mkl=2019.4=233
   - mkl-service=2.3.0=py38hfbe908c_0
   - mkl_fft=1.2.0=py38hc64f4ea_0
@@ -30,6 +34,8 @@ dependencies:
   - openssl=1.1.1h=haf1e3a3_0
   - pillow=8.0.0=py38h1a82f1a_0
   - pip=20.2.4=py38_0
+  - pycodestyle=2.6.0=py_0
+  - pyflakes=2.2.0=py_0
   - pyparsing=2.4.7=py_0
   - python=3.8.5=h26836e1_1
   - python-dateutil=2.8.1=py_0
@@ -38,9 +44,11 @@ dependencies:
   - six=1.15.0=py_0
   - sqlite=3.33.0=hffcf06c_0
   - tk=8.6.10=hb0a8c7a_0
+  - toml=0.10.1=py_0
   - tornado=6.0.4=py38h1de35cc_1
   - wheel=0.35.1=py_0
   - xz=5.2.5=h1de35cc_0
+  - zipp=3.4.0=pyhd3eb1b0_0
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.4.5=h41d2c2f_0
 prefix: ~/anaconda3/envs/simple_space_simulator
