--- a/env.yaml
+++ b/env.yaml
@@ -2,53 +2,81 @@ name: simple_space_simulator
 channels:
   - defaults
 dependencies:
-  - autopep8=1.5.4=py_0
+  - _libgcc_mutex=0.1=main
+  - attrs=20.3.0=pyhd3eb1b0_0
   - blas=1.0=mkl
   - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=pyhd3eb1b0_3
+  - certifi=2020.11.8=py38h06a4308_0
   - cycler=0.10.0=py38_0
+  - dbus=1.13.18=hb2f20db_0
+  - expat=2.2.10=he6710b0_2
   - flake8=3.8.4=py_0
-  - freetype=2.10.4=ha233b18_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.10.4=h5ab3b9f_0
+  - glib=2.66.1=h92f7085_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb31296c_0
+  - icu=58.2=he6710b0_3
   - importlib-metadata=2.0.0=py_1
-  - intel-openmp=2019.4=233
-  - jpeg=9b=he5867d9_2
-  - kiwisolver=1.2.0=py38h04f5b5a_0
-  - lcms2=2.11=h92f6f08_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - libpng=1.6.37=ha441bb4_0
-  - libtiff=4.1.0=hcb84e12_1
-  - lz4-c=1.9.2=h79c402e_3
+  - iniconfig=1.1.1=py_0
+  - intel-openmp=2020.2=254
+  - jpeg=9b=h024ee3a_2
+  - kiwisolver=1.3.0=py38h2531618_0
+  - lcms2=2.11=h396b838_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libedit=3.1.20191231=h14c3975_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_1
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.10=hb55368b_3
+  - lz4-c=1.9.2=heb0550a_3
   - matplotlib=3.3.2=0
-  - matplotlib-base=3.3.2=py38h181983e_0
+  - matplotlib-base=3.3.2=py38h817c723_0
   - mccabe=0.6.1=py38_1
-  - mkl=2019.4=233
-  - mkl-service=2.3.0=py38hfbe908c_0
-  - mkl_fft=1.2.0=py38hc64f4ea_0
-  - mkl_random=1.1.1=py38h959d312_0
-  - ncurses=6.2=h0a44026_1
-  - numpy=1.19.2=py38h456fd55_0
-  - numpy-base=1.19.2=py38hcfb5961_0
+  - mkl=2020.2=256
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.2.0=py38h23d657b_0
+  - mkl_random=1.1.1=py38h0573a6f_0
+  - more-itertools=8.6.0=pyhd3eb1b0_0
+  - ncurses=6.2=he6710b0_1
+  - numpy=1.19.2=py38h54aff64_0
+  - numpy-base=1.19.2=py38hfa32c7d_0
   - olefile=0.46=py_0
-  - openssl=1.1.1h=haf1e3a3_0
-  - pillow=8.0.0=py38h1a82f1a_0
-  - pip=20.2.4=py38_0
+  - openssl=1.1.1h=h7b6447c_0
+  - packaging=20.4=py_0
+  - pcre=8.44=he6710b0_0
+  - pillow=8.0.1=py38he98fc37_0
+  - pip=20.2.4=py38h06a4308_0
+  - pluggy=0.13.1=py38_0
+  - py=1.9.0=py_0
   - pycodestyle=2.6.0=py_0
   - pyflakes=2.2.0=py_0
   - pyparsing=2.4.7=py_0
-  - python=3.8.5=h26836e1_1
+  - pyqt=5.9.2=py38h05f1152_4
+  - pytest=6.1.1=py38_0
+  - python=3.8.5=h7579374_1
   - python-dateutil=2.8.1=py_0
-  - readline=8.0=h1de35cc_0
-  - setuptools=50.3.0=py38h0dc7051_1
-  - six=1.15.0=py_0
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
+  - qt=5.9.7=h5867ecd_1
+  - readline=8.0=h7b6447c_0
+  - scipy=1.5.2=py38h0b6359f_0
+  - setuptools=50.3.1=py38h06a4308_1
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py38h06a4308_0
+  - sqlite=3.33.0=h62c20be_0
+  - tk=8.6.10=hbc83047_0
   - toml=0.10.1=py_0
-  - tornado=6.0.4=py38h1de35cc_1
-  - wheel=0.35.1=py_0
-  - xz=5.2.5=h1de35cc_0
+  - tornado=6.0.4=py38h7b6447c_1
+  - wheel=0.35.1=pyhd3eb1b0_0
+  - xz=5.2.5=h7b6447c_0
   - zipp=3.4.0=pyhd3eb1b0_0
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.4.5=h41d2c2f_0
-prefix: ~/anaconda3/envs/simple_space_simulator
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.5=h9ceee32_0
+  - pip:
+    - pyigrf==0.3.3
+prefix: /home/michael/anaconda3/envs/simple_space_simulator
+
